Hojas de estilo compartidas

--- a/Reto1/29551025/perfil.html
+++ b/Reto1/29551025/perfil.html
@@ -5,73 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Monsalve</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 30px;
-        }
-        .container {
-            display: flex;
-            align-items: flex-start;
-            
-        }
-        .foto {
-            margin-right: 2px;
-        }
-        .foto img {
-            width: 250px;
-            border-top-left-radius: 50px;
-        }
-        .info {
-            max-width: 700px;
-            border: 1px solid black;
-            padding: 10px;
-            box-sizing: border-box;
-            box-shadow: 6px 6px 6px rgb(59, 59, 59);
-        }
-        .nombre {
-            font-size: 32px;
-            color: rgb(7,119,216);           
-            font-weight: bold;
-        }
-        .descripcion {
-            font-family: "Georgia", serif;
-            font-style: italic;
-            margin-top: 10px;
-        }
-        .detalle {
-            margin-top: 10px;
-            line-height: 1.5;
-            width: 100%;
-            border-spacing: 10px 5px; 
-        }
-        .detalle td:first-child {
-            padding-right: 20px;
-            width: 250px; 
-        }
-        .detalle td {
-            vertical-align: top;
-        }
-        .lenguajes {
-            font-weight: bold;
-        }
-        .email {
-            margin-top: 10px;
-        }
-        .correo-link:link {
-            color: orange;
-            text-decoration: none;
-        }
+    <link rel="stylesheet" href="../css/style.css">
 
-        .correo-link:focus,
-        .correo-link:visited,
-        .correo-link:active {
-            color: red;
-        }
-
-    </style>
 </head>
-<body>
+<body class="perfil-body">
     <div class="container">
         <div class="foto">
             <img src="29551025.jpg" alt="Foto de Carlos Monsalve">
