--- a/Reto1/index.html
+++ b/Reto1/index.html
@@ -4,123 +4,9 @@
     <meta charset="UTF-8">
     <title>ATI[UCV] 2025-1</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #f9f9f9;
-        }
-        header, footer {
-            background-color: #87afeb;
-            padding: 10px;
-            text-align: center;
-        }
-        nav {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            padding: 5px 0;
-            color: white;
-            align-items: center;
-            position: relative; 
-        }
-        nav::before,
-        nav::after {
-            content: "";
-            position: absolute;
-            top: 0; 
-            bottom: 0; 
-            width: 0.25%; 
-            background-color: white;
-        }
-        nav::before {
-            left: 33.33%;
-        }
-        nav::after {
-            left: 66.66%;
-        }
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-        nav li {
-            margin: 0 10px;
-        }
-        .titulo-principal {
-            font-size: 2em;
-            padding-left: 20px;
-            text-align: left;
-        }
-        .titulo-principal span {
-            font-size: 0.6em;
-        }
-        nav > ul:nth-child(2) {
-            justify-content: center;
-            font-size: 16px;
-        }        
-        .busqueda {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            padding-right: 20px;
-            gap: 5px;
-        }
-        .busqueda input[type="text"] {
-            padding: 5px;
-        }
-        .busqueda input[type="submit"] {
-            padding: 5px 10px;
-            color: #87afeb;
-        }
-        section {
-            padding: 20px;
-            border-top: 2px solid #ccc;
-            border-bottom: 2px solid #ccc;
-        }
-        ul.estudiantes {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4 columnas iguales */
-            gap: 10px;
-            padding: 5px;
-            list-style: none;
-            margin: 0 auto;  
-            width: 80%;    
-            justify-items: center;        
-        }
-        ul.estudiantes li {
-            background-color: #f8f4f4;
-            border: 1px solid #ddd;
-            color: #87afeb;
-            font-size: 12px;
-            font-weight: bold;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            box-sizing: border-box;
-            box-shadow: 1px 1px 1px gray;
-            padding: 10px;
-            box-sizing: border-box;
-            width: 150px; 
-            height: 150px; 
-
-        }
-        ul.estudiantes img {
-            width: 100px;
-            height: 100px;
-            object-fit: contain; 
-            border-radius: 10px;
-            margin-bottom: 10px;
-            background-color: white;
-        }
-        footer {
-            font-size: 0.8em;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-
+<body class="index-body">
 <header>
     <nav>
         <ul>
