Animación sobre los alumnos

--- a/Reto1/index.html
+++ b/Reto1/index.html
@@ -25,8 +25,10 @@
 <section>
     <ul class="estudiantes">
         <li>
-            <img src="29551025/29551025.jpg" alt="Foto Carlos">
-            <div>Carlos Monsalve</div>
+            <a href="29551025/perfil.html" style="text-decoration: none; color: inherit; display: block;">
+                <img src="29551025/29551025.jpg" alt="Foto Carlos">
+                <div>Carlos Monsalve</div>
+            </a>
         </li>
         <li>
             <img src="dummy6/dummy.jpg" alt="Avatar 6">
