--- a/Reto2/29551025/perfil.html
+++ b/Reto2/29551025/perfil.html
@@ -11,7 +11,7 @@
 <body class="perfil-body">
     <div class="container">
         <div class="foto">
-            <img src="29551025.jpg" alt="Foto de Carlos Monsalve">
+            <img class="foto-perfil" src="29551025Grande.jpg" alt="Foto de Carlos Monsalve">
         </div>
         <div class="info">
             <div class="nombre">Carlos Monsalve</div>
