--- a/Reto2/index.html
+++ b/Reto2/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATI[UCV] 2025-1</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
@@ -26,52 +27,52 @@
     <ul class="estudiantes">
         <li>
             <a href="29551025/perfil.html" style="text-decoration: none; color: inherit; display: block;">
-                <img src="29551025/29551025.jpg" alt="Foto Carlos">
+                <img id="foto-carlos" src="29551025/29551025Grande.jpg" alt="Foto Carlos">
                 <div>Carlos Monsalve</div>
             </a>
         </li>
         <li>
-            <img src="dummy6/dummy.jpg" alt="Avatar 6">
+            <img src="dummies/dummy6/dummy.jpg" alt="Avatar 6">
             <div>Juan Antonio Perez</div>
         </li>
         <li>
-            <img src="dummy3/dummy.jpg" alt="Avatar 3">
+            <img src="dummies/dummy3/dummy.jpg" alt="Avatar 3">
             <div>Maritza Rodríguez</div>
         </li>
         <li>
-            <img src="dummy1/dummy.jpg" alt="Avatar 1">
+            <img src="dummies/dummy1/dummy.jpg" alt="Avatar 1">
             <div>Emilia Casado</div>
         </li>
         <li>
-            <img src="dummy4/dummy.jpg" alt="Avatar 4">
+            <img src="dummies/dummy4/dummy.jpg" alt="Avatar 4">
             <div>Enrique Colina</div>
         </li>
         <li>
-            <img src="dummy2/dummy.jpg" alt="Avatar 2">
+            <img src="dummies/dummy2/dummy.jpg" alt="Avatar 2">
             <div>María Elena Pinto</div>
         </li>
         <li>
-            <img src="dummy5/dummy.jpg" alt="Avatar 5">
+            <img src="dummies/dummy5/dummy.jpg" alt="Avatar 5">
             <div>Ronald Gutierrez</div>
         </li>
         <li>
-            <img src="dummy6/dummy.jpg" alt="Avatar 6">
+            <img src="dummies/dummy6/dummy.jpg" alt="Avatar 6">
             <div>Juan Antonio Perez</div>
         </li>
         <li>
-            <img src="dummy3/dummy.jpg" alt="Avatar 3">
+            <img src="dummies/dummy3/dummy.jpg" alt="Avatar 3">
             <div>Maritza Rodríguez</div>
         </li>
         <li>
-            <img src="dummy1/dummy.jpg" alt="Avatar 1">
+            <img src="dummies/dummy1/dummy.jpg" alt="Avatar 1">
             <div>Emilia Casado</div>
         </li>
         <li>
-            <img src="dummy4/dummy.jpg" alt="Avatar 4">
+            <img src="dummies/dummy4/dummy.jpg" alt="Avatar 4">
             <div>Enrique Colina</div>
         </li>
         <li>
-            <img src="dummy2/dummy.jpg" alt="Avatar 2">
+            <img src="dummies/dummy2/dummy.jpg" alt="Avatar 2">
             <div>María Elena Pinto</div>
         </li>
     </ul>
