Perfil con información dinámica

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="icon" href="">
-    <link rel="" href="css/style.css">
+    <title>ATI[UCV] 2025-1</title>
+    <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="resource" type="application/json" href="conf/configES.json">
     <script type="application/json" src="conf/configES.json" id="appConfig"></script>
