--- a/perfil.html
+++ b/perfil.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="icon" href="">
+    <title class="titulo"></title>
+    <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico">
     <link rel="stylesheet" href="../css/style.css">
+    <script type="application/json" src="conf/configES.json" id="appConfig"></script>
+    <script src="js/perfil.js" defer></script>
 </head>
 <body class="perfil-body">
     <div class="container">
@@ -17,24 +19,24 @@
             <div class="descripcion"></div>
             <table class="detalle">
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td id="P1"></td>
+                    <td id="R1"></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td id="P2"></td>
+                    <td id="R2"></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td id="P3"></td>
+                    <td id="R3"></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td id="P4"></td>
+                    <td id="R4"></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td id="P5"></td>
+                    <td id="R5"></td>
                 </tr>
             </table>            
             <div class="email">
